--- a/POC.Ajax/POC.Ajax/Views/Home/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Home/Index.cshtml
@@ -1,4 +1,55 @@
-﻿<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿@model IEnumerable<CustomerViewModel>
+
+<div id="divList">
+    <p>
+        <button class="btn btn-secondary" onclick="callCreateView()">Create New</button>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Id)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Birth)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Gender)
+                </th>
+                <th>
+                    Actions
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model) {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Birth)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Gender)
+                    </td>
+                    <td>
+                        <button class="btn btn-secondary" onclick="callEditView(@item.Id)">Edit</button> 
+                        <button class="btn btn-secondary" onclick="callDetailsView(@item.Id)">Details</button> 
+                        <button class="btn btn-secondary" onclick="callDeleteView(@item.Id)">Delete</button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
+
+<partial name="~/Views/Home/_Create.cshtml" />
+
+<script src="~/js/Home/Index.js"></script>
