--- a/POC.Ajax/POC.Ajax/Views/_ViewImports.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using POC.Ajax
-@using POC.Ajax.Models.Customer
+@using POC.Ajax.Models.Customers
 @using POC.Ajax.Models.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
