--- a/POC.Ajax/POC.Ajax/Views/Home/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Home/_Create.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="divCreate" hidden>
-    <h4>Create new customer</h4>
+    <h4>New customer registration</h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
@@ -14,14 +14,35 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Gender</label>
-                    <input type="number" name="Gender" id="Gender" class="form-control" min="0" max="2"/>
+                    <select name="Gender" id="Gender" class="form-control">
+                        <option value="0">Male</option>
+                        <option value="1">Famale</option>
+                        <option value="2">Other</option>
+                    </select>
                 </div>
                 <br />
                 <div class="form-group">
-                    <input type="button" value="Create" class="btn btn-primary" />
-                    <input type="button" value="Voltar" class="btn btn-dark" onclick="backToIndexView()"/>
+                    <input type="button" value="Add To List" class="btn btn-primary"  onclick="addToCreateList()"/>
+                    <input type="button" value="Voltar" class="btn btn-secondary" onclick="backToIndexView()"/>
                 </div>
             </form>
+        </div>
+        <div class="col-md-8">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Birth</th>
+                        <th>Gender</th>
+                    </tr>
+                </thead>
+                <tbody id="tbodyCreateList">
+                    <tr>
+                        <td colspan="3" align="center">No customers added to the list</td>
+                    </tr>
+                </tbody>
+            </table>
+            <input type="button" value="Create" id="btnCreate" class="btn btn-success"  onclick="create()" disabled/>
         </div>
     </div>
 </div>
