Finalizando tela de edit

--- a/POC.Ajax/POC.Ajax/Views/Home/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Home/Index.cshtml
@@ -62,3 +62,5 @@
 <script src="~/js/Home/Index.js"></script>
     
 <partial name="~/Views/Home/_Create.cshtml" />
+    
+<partial name="~/Views/Home/_Edit.cshtml" />
