--- a/POC.Ajax/POC.Ajax/Views/Home/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Home/_Create.cshtml
@@ -6,15 +6,15 @@
             <form>
                 <div class="form-group">
                     <label class="control-label">Name</label>
-                    <input type="text" name="Name" id="Name" class="form-control" />
+                    <input type="text" name="NameCreate" id="NameCreate" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label class="control-label">Birth</label>
-                    <input type="date" name="Birth" id="Birth" class="form-control" />
+                    <input type="date" name="BirthCreate" id="BirthCreate" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label class="control-label">Gender</label>
-                    <select name="Gender" id="Gender" class="form-control">
+                    <select name="GenderCreate" id="GenderCreate" class="form-control">
                         <option value="0">Male</option>
                         <option value="1">Famale</option>
                         <option value="2">Other</option>
@@ -23,7 +23,7 @@
                 <br />
                 <div class="form-group">
                     <input type="button" value="Add To List" class="btn btn-primary"  onclick="addToCreateList()"/>
-                    <input type="button" value="Voltar" class="btn btn-secondary" onclick="backToIndexView()"/>
+                    <input type="button" value="Voltar" class="btn btn-secondary" onclick="createBackToIndexView()"/>
                 </div>
             </form>
         </div>
@@ -42,9 +42,9 @@
                     </tr>
                 </tbody>
             </table>
-            <input type="button" value="Create" id="btnCreate" class="btn btn-success"  onclick="create()" disabled/>
+            <input type="button" value="Create" id="btnCreate" class="btn btn-success"  onclick="createAjax()" disabled/>
         </div>
     </div>
 </div>
 
-<script src="~/js/Home/Create.js"></script>
+<script src="~/js/Home/_Create.js"></script>
