--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -42,9 +42,9 @@
                             @Html.DisplayFor(modelItem => item.Gender)
                         </td>
                         <td>
-                            <button class="btn btn-secondary" onclick="callEditView(@item.Id)">Edit</button> 
-                            <button class="btn btn-secondary" onclick="callDetailsView(@item.Id)">Details</button> 
-                            <button class="btn btn-secondary" onclick="callDeleteView(@item.Id)">Delete</button>
+                            <button class="btn btn-secondary" onclick="callEditViewAjax(@item.Id)">Edit</button> 
+                            <button class="btn btn-secondary" onclick="callDetailsViewAjax(@item.Id)">Details</button> 
+                            <button class="btn btn-secondary" onclick="callDeleteViewAjax(@item.Id)">Delete</button>
                         </td>
                     </tr>
                 }
@@ -61,6 +61,6 @@
 
 <script src="~/js/Home/Index.js"></script>
     
-<partial name="~/Views/Home/_Create.cshtml" />
+<partial name="~/Views/Customer/_Create.cshtml" />
     
-<partial name="~/Views/Home/_Edit.cshtml" />
+<partial name="~/Views/Customer/_Edit.cshtml" />
