--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -36,7 +36,7 @@
                             @Html.DisplayFor(modelItem => item.Name)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Birth)
+                            @item.Birth.ToString("yyyy-MM-dd")
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Gender)
@@ -64,3 +64,5 @@
 <partial name="~/Views/Customer/_Create.cshtml" />
     
 <partial name="~/Views/Customer/_Edit.cshtml" />
+    
+<partial name="~/Views/Customer/_Details.cshtml" />
