--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -66,3 +66,5 @@
 <partial name="~/Views/Customer/_Edit.cshtml" />
     
 <partial name="~/Views/Customer/_Details.cshtml" />
+    
+<partial name="~/Views/Customer/_Delete.cshtml" />
