--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -59,7 +59,7 @@
     </table>
 </div>
 
-<script src="~/js/Home/Index.js"></script>
+<script src="~/js/Customer/Index.js"></script>
     
 <partial name="~/Views/Customer/_Create.cshtml" />
     
