--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -36,7 +36,7 @@
                             @Html.DisplayFor(modelItem => item.Name)
                         </td>
                         <td>
-                            @item.Birth.ToString("yyyy-MM-dd")
+                            @item.Birth.ToString("dd/MM/yyyy")
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Gender)
