--- a/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Birth</label>
-                    <input type="date" name="BirthDelete" id="BirthDelete" class="form-control" readonly/>
+                    <input type="text" name="BirthDelete" id="BirthDelete" class="form-control" readonly/>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Birth</label>
