--- a/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Birth</label>
-                    <input type="date" name="BirthDetails" id="BirthDetails" class="form-control" readonly/>
+                    <input type="text" name="BirthDetails" id="BirthDetails" class="form-control" readonly/>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Birth</label>
