Inserindo .gif para loader do ajax

--- a/POC.Ajax/POC.Ajax/wwwroot/css/site.css
+++ b/POC.Ajax/POC.Ajax/wwwroot/css/site.css
@@ -67,3 +67,18 @@ button.accept-policy {
 td {
     vertical-align: middle;
 }
+
+#div-loader {
+    z-index: 99999;
+    position: absolute;
+    height: auto;
+    width: auto;
+    margin-top: 300px;
+    margin-left: 50%;
+    text-align: center;
+}
+
+#loader {
+    height: 60px;
+    width: 60px;
+}
