--- a/POC.Ajax/POC.Ajax/Views/Shared/_Layout.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Shared/_Layout.cshtml
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/toastr/toastr.css" />
+
+    <style>
+        
+    </style>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -20,8 +25,11 @@
                 </button>
             </div>
         </nav>
-    </header>
-    <div class="container">
+    </header>                   
+    <div id="div-loader" hidden>
+        <img id="loader" src="~/images/loader.gif" alt="gif-loader"/>
+    </div>
+    <div class="container"> 
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
