--- a/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="divCreate" hidden>
+﻿<div id="divCreate" style="display:none;">
     <h4>New customer registration</h4>
     <hr />
     <div class="row">
