--- a/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="divDetails" hidden>
+﻿<div id="divDetails" style="display:none;">
     <h4>Details of customer</h4>
     <hr />
     <div class="row">
