--- a/POC.Ajax/POC.Ajax/Views/Shared/_Layout.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">POC.Ajax</a>
+                <a class="navbar-brand">POC.Ajax</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
             </div>
         </nav>
     </header>                   
-    <div id="div-loader" hidden>
+    <div id="div-loader">
         <img id="loader" src="~/images/loader.gif" alt="gif-loader"/>
     </div>
     <div class="container"> 
