--- a/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="divCreate" style="display:none;">
+﻿<div id="DivCreate" style="display:none;">
     <h4>New customer registration</h4>
     <hr />
     <div class="row">
@@ -36,13 +36,13 @@
                         <th>Gender</th>
                     </tr>
                 </thead>
-                <tbody id="tbodyCreateList">
+                <tbody id="TbodyCreateList">
                     <tr>
                         <td colspan="3" align="center">No customers added to the list</td>
                     </tr>
                 </tbody>
             </table>
-            <input type="button" value="Create" id="btnCreate" class="btn btn-success"  onclick="createAjax()" disabled/>
+            <input type="button" value="Create" id="BtnCreate" class="btn btn-success"  onclick="createAjax()" disabled/>
         </div>
     </div>
 </div>
