--- a/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="divDelete" style="display:none;">
+﻿<div id="DivDelete" style="display:none;">
     <h4>Delete customer</h4>
     <hr />
     <div class="row">
