--- a/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="divEdit" style="display:none;">
+﻿<div id="DivEdit" style="display:none;">
     <h4>Edit customer</h4>
     <hr />
     <div class="row">
