Refatoração utilizando partial views

--- a/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
@@ -1,49 +1,48 @@
-﻿<div id="DivCreate" style="display:none;">
-    <h4>New customer registration</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form>
-                <div class="form-group">
-                    <label class="control-label">Name</label>
-                    <input type="text" name="NameCreate" id="NameCreate" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Birth</label>
-                    <input type="date" name="BirthCreate" id="BirthCreate" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Gender</label>
-                    <select name="GenderCreate" id="GenderCreate" class="form-control">
-                        <option value="0">Male</option>
-                        <option value="1">Famale</option>
-                        <option value="2">Other</option>
-                    </select>
-                </div>
-                <br />
-                <div class="form-group">
-                    <input type="button" value="Add To List" class="btn btn-primary"  onclick="addToCreateList()"/>
-                    <input type="button" value="Voltar" class="btn btn-secondary" onclick="createBackToIndexView()"/>
-                </div>
-            </form>
-        </div>
-        <div class="col-md-8">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Birth</th>
-                        <th>Gender</th>
-                    </tr>
-                </thead>
-                <tbody id="TbodyCreateList">
-                    <tr>
-                        <td colspan="3" align="center">No customers added to the list</td>
-                    </tr>
-                </tbody>
-            </table>
-            <input type="button" value="Create" id="BtnCreate" class="btn btn-success"  onclick="createAjax()" disabled/>
-        </div>
+﻿@using POC.Ajax.Enums;
+@model CustomerViewModel
+
+<h4>New customer registration</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" id="Name" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Birth" class="control-label"></label>
+                <input asp-for="Birth" id="Birth" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Gender" class="control-label"></label>
+                <select asp-for="Gender" id="Gender" asp-items="@Html.GetEnumSelectList<EGender>()" class="form-control">
+                    <option value=""></option>
+                </select>
+            </div>
+            <br />
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" onclick="addToCreateList()">Add To List</button>
+                <button type="button" class="btn btn-secondary" onclick="callListView()">Voltar</button>
+            </div>
+        </form>
+    </div>
+    <div class="col-md-8">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Birth</th>
+                    <th>Gender</th>
+                </tr>
+            </thead>
+            <tbody id="TbodyCreateList">
+                <tr>
+                    <td colspan="3" align="center">No customers added to the list</td>
+                </tr>
+            </tbody>
+        </table>
+        <button type="button" id="BtnCreate" class="btn btn-success" onclick="createAjax()" disabled>Create</button>
     </div>
 </div>
 
