--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -1,70 +1,5 @@
-﻿@model IEnumerable<CustomerViewModel>
-
-<div id="DivList">
-    <p>
-        <button class="btn btn-secondary" onclick="callCreateView()">Create New</button>
-    </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Id)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Birth)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Gender)
-                </th>
-                <th>
-                    Actions
-                </th>
-            </tr>
-        </thead>
-        <tbody id="TbodyList">
-            @if(Model != null && Model.Count() > 0)
-            {
-                foreach (var item in Model) {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Id)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @item.Birth.ToString("dd/MM/yyyy")
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Gender)
-                        </td>
-                        <td>
-                            <button class="btn btn-secondary" onclick="callEditViewAjax(@item.Id)">Edit</button> 
-                            <button class="btn btn-secondary" onclick="callDetailsViewAjax(@item.Id)">Details</button> 
-                            <button class="btn btn-secondary" onclick="callDeleteViewAjax(@item.Id)">Delete</button>
-                        </td>
-                    </tr>
-                }
-            }
-            else
-            {
-                <tr>
-                    <td colspan="5" align="center">No registered customer</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+﻿<div id="DivCustomer">
+    <partial name="~/Views/Customer/_List.cshtml" />
 </div>
 
 <script src="~/js/Customer/Index.js"></script>
-    
-<partial name="~/Views/Customer/_Create.cshtml" />
-    
-<partial name="~/Views/Customer/_Edit.cshtml" />
-    
-<partial name="~/Views/Customer/_Details.cshtml" />
-    
-<partial name="~/Views/Customer/_Delete.cshtml" />
