--- a/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
@@ -1,33 +1,33 @@
-﻿<div id="DivDelete" style="display:none;">
-    <h4>Delete customer</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form>
-                <div class="form-group">
-                    <label class="control-label">Id</label>
-                    <input type="number" name="IdDelete" id="IdDelete" class="form-control" readonly/>
-                </div>
+﻿@model CustomerViewModel
 
-                <div class="form-group">
-                    <label class="control-label">Name</label>
-                    <input type="text" name="NameDelete" id="NameDelete" class="form-control" readonly/>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Birth</label>
-                    <input type="text" name="BirthDelete" id="BirthDelete" class="form-control" readonly/>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Birth</label>
-                    <input type="text" name="GenderDelete" id="GenderDelete" class="form-control" readonly/>
-                </div>
-                <br />
-                <div class="form-group">
-                    <input type="button" value="Delete" class="btn btn-danger"  onclick="deleteAjax()"/>
-                    <input type="button" value="Voltar" class="btn btn-secondary" onclick="deleteBackToIndexView()"/>
-                </div>
-            </form>
-        </div>
+<h4>Delete customer</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" readonly/>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" readonly/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Birth" class="control-label"></label>
+                <input asp-for="Birth" class="form-control" readonly/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Gender" class="control-label"></label>
+                <input asp-for="Gender" class="form-control" readonly/>
+            </div>
+            <br />
+            <div class="form-group">
+                <button type="button" class="btn btn-danger" onclick="deleteAjax()">Delete</button>
+                <button type="button" class="btn btn-secondary" onclick="callListView()">Voltar</button>
+            </div>
+        </form>
     </div>
 </div>
 
