--- a/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
@@ -1,33 +1,31 @@
-﻿<div id="DivDetails" style="display:none;">
-    <h4>Details of customer</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form>
-                <div class="form-group">
-                    <label class="control-label">Id</label>
-                    <input type="number" name="IdDetails" id="IdDetails" class="form-control" readonly/>
-                </div>
+﻿@model CustomerViewModel
 
-                <div class="form-group">
-                    <label class="control-label">Name</label>
-                    <input type="text" name="NameDetails" id="NameDetails" class="form-control" readonly/>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Birth</label>
-                    <input type="text" name="BirthDetails" id="BirthDetails" class="form-control" readonly/>
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Birth</label>
-                    <input type="text" name="GenderDetails" id="GenderDetails" class="form-control" readonly/>
-                </div>
-                <br />
-                <div class="form-group">
-                    <input type="button" value="Voltar" class="btn btn-secondary" onclick="detailsBackToIndexView()"/>
-                </div>
-            </form>
-        </div>
+<h4>Details of customer</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" readonly/>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" readonly/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Birth" class="control-label"></label>
+                <input asp-for="Birth" class="form-control" readonly/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Gender" class="control-label"></label>
+                <input asp-for="Gender" class="form-control" readonly/>
+            </div>
+            <br />
+            <div class="form-group">
+                <input type="button" value="Voltar" class="btn btn-secondary" onclick="callListView()"/>
+            </div>
+        </form>
     </div>
 </div>
-
-<script src="~/js/Customer/_Details.js"></script>
