--- a/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
@@ -1,37 +1,36 @@
-﻿<div id="DivEdit" style="display:none;">
-    <h4>Edit customer</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form>
-                <div class="form-group">
-                    <label class="control-label">Id</label>
-                    <input type="number" name="IdEdit" id="IdEdit" class="form-control" readonly/>
-                </div>
+﻿@using POC.Ajax.Enums
+@model CustomerViewModel
 
-                <div class="form-group">
-                    <label class="control-label">Name</label>
-                    <input type="text" name="NameEdit" id="NameEdit" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Birth</label>
-                    <input type="date" name="BirthEdit" id="BirthEdit" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label class="control-label">Gender</label>
-                    <select name="GenderEdit" id="GenderEdit" class="form-control">
-                        <option value="0">Male</option>
-                        <option value="1">Famale</option>
-                        <option value="2">Other</option>
-                    </select>
-                </div>
-                <br />
-                <div class="form-group">
-                    <input type="button" value="Edit" class="btn btn-success"  onclick="edit()"/>
-                    <input type="button" value="Voltar" class="btn btn-secondary" onclick="editBackToIndexView()"/>
-                </div>
-            </form>
-        </div>
+<h4>Edit customer</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" id="Id" class="form-control" readonly/>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" id="Name" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Birth" class="control-label"></label>
+                <input asp-for="Birth" id="Birth" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Gender" class="control-label"></label>
+                <select asp-for="Gender" id="Gender" asp-items="@Html.GetEnumSelectList<EGender>()" class="form-control">
+                    <option value=""></option>
+                </select>
+            </div>
+            <br />
+            <div class="form-group">
+                <button type="button" class="btn btn-success" onclick="edit()">Edit</button>
+                <button type="button" class="btn btn-secondary" onclick="callListView()">Voltar</button>
+            </div>
+        </form>
     </div>
 </div>
 
