--- a/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
@@ -23,7 +23,7 @@
             <br />
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="addToCreateList()">Add To List</button>
-                <button type="button" class="btn btn-secondary" onclick="callListView()">Voltar</button>
+                <button type="button" class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
