--- a/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
@@ -9,7 +9,6 @@
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" readonly/>
             </div>
-
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" readonly/>
@@ -24,8 +23,8 @@
             </div>
             <br />
             <div class="form-group">
-                <button type="button" class="btn btn-danger" onclick="deleteAjax()">Delete</button>
-                <button type="button" class="btn btn-secondary" onclick="callListView()">Voltar</button>
+                <button class="btn btn-danger" onclick="deleteAjax()">Delete</button>
+                <button class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
