--- a/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
@@ -24,7 +24,7 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="button" value="Voltar" class="btn btn-secondary" onclick="callListView()"/>
+                <button class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
