--- a/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
@@ -28,7 +28,7 @@
             <br />
             <div class="form-group">
                 <button type="button" class="btn btn-success" onclick="edit()">Edit</button>
-                <button type="button" class="btn btn-secondary" onclick="callListView()">Voltar</button>
+                <button type="button" class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
