--- a/POC.Ajax/POC.Ajax/Views/Shared/Error.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Shared/Error.cshtml
@@ -1,5 +1,4 @@
-﻿@page
-@model ErrorViewModel
+﻿@model ErrorViewModel
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
