--- a/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
@@ -8,22 +8,22 @@
         <form>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" id="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Birth" class="control-label"></label>
-                <input asp-for="Birth" id="Birth" class="form-control" />
+                <input asp-for="Birth" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" id="Gender" asp-items="@Html.GetEnumSelectList<EGender>()" class="form-control">
+                <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<EGender>()" class="form-control">
                     <option value=""></option>
                 </select>
             </div>
             <br />
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="addToCreateList()">Add To List</button>
-                <button type="button" class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
+                <button class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
