--- a/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
@@ -8,27 +8,26 @@
         <form>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" id="Id" class="form-control" readonly/>
+                <input asp-for="Id" class="form-control" readonly/>
             </div>
-
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" id="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Birth" class="control-label"></label>
-                <input asp-for="Birth" id="Birth" class="form-control" />
+                <input asp-for="Birth" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" id="Gender" asp-items="@Html.GetEnumSelectList<EGender>()" class="form-control">
+                <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<EGender>()" class="form-control">
                     <option value=""></option>
                 </select>
             </div>
             <br />
             <div class="form-group">
-                <button type="button" class="btn btn-success" onclick="edit()">Edit</button>
-                <button type="button" class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
+                <button class="btn btn-success" onclick="edit()">Edit</button>
+                <button class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
