Ajustes gerais e padronizações

--- a/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
@@ -36,13 +36,13 @@
                     <th>Gender</th>
                 </tr>
             </thead>
-            <tbody id="TbodyCreateList">
+            <tbody id="tbody-create-list">
                 <tr>
                     <td colspan="3" align="center">No customers added to the list</td>
                 </tr>
             </tbody>
         </table>
-        <button type="button" id="BtnCreate" class="btn btn-success" onclick="createAjax()" disabled>Create</button>
+        <button id="btn-create" class="btn btn-success" onclick="createAjax()" disabled>Create</button>
     </div>
 </div>
 
