--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -2,4 +2,4 @@
     <partial name="~/Views/Customer/_List.cshtml" />
 </div>
 
-<script src="~/js/Customer/Index.js"></script>
+<script src="~/js/Customers/Index.js"></script>
