Resolvendo bug em botões de ação

--- a/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Edit.cshtml
@@ -26,8 +26,8 @@
             </div>
             <br />
             <div class="form-group">
-                <button class="btn btn-success" onclick="edit()">Edit</button>
-                <button class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
+                <button type="button" class="btn btn-success" onclick="edit()">Edit</button>
+                <button type="button" class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
