--- a/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Create.cshtml
@@ -23,7 +23,7 @@
             <br />
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="addToCreateList()">Add To List</button>
-                <button class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
+                <button type="button" class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
@@ -42,7 +42,7 @@
                 </tr>
             </tbody>
         </table>
-        <button id="btn-create" class="btn btn-success" onclick="createAjax()" disabled>Create</button>
+        <button type="button" id="btn-create" class="btn btn-success" onclick="createAjax()" disabled>Create</button>
     </div>
 </div>
 
