--- a/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Delete.cshtml
@@ -23,8 +23,8 @@
             </div>
             <br />
             <div class="form-group">
-                <button class="btn btn-danger" onclick="deleteAjax()">Delete</button>
-                <button class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
+                <button type="button" class="btn btn-danger" onclick="deleteAjax()">Delete</button>
+                <button type="button" class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
