--- a/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_Details.cshtml
@@ -23,7 +23,7 @@
             </div>
             <br />
             <div class="form-group">
-                <button class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
+                <button type="button" class="btn btn-secondary" onclick="callListViewAjax()">Voltar</button>
             </div>
         </form>
     </div>
