--- a/POC.Ajax/POC.Ajax/Views/Customer/_List.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/_List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CustomerViewModel>
 
 <p>
-    <button class="btn btn-secondary" onclick="callCreateViewAjax()">Create New</button>
+    <button type="button" class="btn btn-secondary" onclick="callCreateViewAjax()">Create New</button>
 </p>
 <table class="table">
     <thead>
