--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="div-container-crud">
-    <partial name="~/Views/Customer/_List.cshtml" />
+    <partial name="~/Views/customer/_List.cshtml" />
 </div>
 
-<script src="~/js/Customers/Index.js"></script>
+<script src="~/js/customers/index.js"></script>
