Utilizando classes nos arquivos js

--- a/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
+++ b/POC.Ajax/POC.Ajax/Views/Customer/Index.cshtml
@@ -2,4 +2,5 @@
     <partial name="~/Views/customer/_List.cshtml" />
 </div>
 
+<script src="~/js/customers/models/customer.js"></script>
 <script src="~/js/customers/index.js"></script>
