Updating .net version; Organizing files and folders;

--- a/src/POC.Ajax/Views/Customer/_List.cshtml
+++ b/src/POC.Ajax/Views/Customer/_List.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<CustomerViewModel>
+﻿@using POC.Ajax.Models.Customers
+@model IEnumerable<CustomerViewModel>
 
 <p>
     <button type="button" class="btn btn-secondary" onclick="callCreateViewAjax()">Create New</button>
