--- a/src/POC.Ajax/Views/_ViewImports.cshtml
+++ b/src/POC.Ajax/Views/_ViewImports.cshtml
@@ -1,4 +1,1 @@
-﻿@using POC.Ajax
-@using POC.Ajax.Models.Customers
-@using POC.Ajax.Models.Shared
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
