--- a/src/POC.Ajax/Views/Customer/_Create.cshtml
+++ b/src/POC.Ajax/Views/Customer/_Create.cshtml
@@ -1,4 +1,5 @@
-﻿@using POC.Ajax.Enums;
+﻿@using POC.Ajax.Enums
+@using POC.Ajax.Models.Customers
 @model CustomerViewModel
 
 <h4>New customer registration</h4>
@@ -16,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<EGender>()" class="form-control">
+                <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<Gender>()" class="form-control">
                     <option value=""></option>
                 </select>
             </div>
