--- a/src/POC.Ajax/Views/Customer/_Edit.cshtml
+++ b/src/POC.Ajax/Views/Customer/_Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using POC.Ajax.Enums
+@using POC.Ajax.Models.Customers
 @model CustomerViewModel
 
 <h4>Edit customer</h4>
@@ -20,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<EGender>()" class="form-control">
+                <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<Gender>()" class="form-control">
                     <option value=""></option>
                 </select>
             </div>
