Changing namespaces for project organization

--- a/src/POC.Ajax/Views/Customer/_Edit.cshtml
+++ b/src/POC.Ajax/Views/Customer/_Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using POC.Ajax.Enums
-@using POC.Ajax.Models.Customers
+@using POC.Ajax.Models.Customer
 @model CustomerViewModel
 
 <h4>Edit customer</h4>
